--- a/tex/main.tex
+++ b/tex/main.tex
@@ -12,7 +12,8 @@
 
 \usepackage{commath}
 
-
+\usepackage[utf8]{inputenc}
+\newtheorem{regla}{Regla}
 
 \usepackage[spanish,es-tabla]{babel}
 
@@ -230,6 +231,15 @@ P(t) = \dfrac{1}{2} + \int_\mu^t f(x)\dif x
 \end{align}
 
 
+\section{Algoritmo EMSR-b}
+
+Consiste en proteger suficientes \emph{asientos} de respectivas clases con tal de maximizar el ingreso total.\\
+
+Se basa en la \emph{Regla de Littlewood}:
+
+\begin{regla}
+La razón entre las tarifas de respectivas clases ha de ser igual a la probabilidad de ser ocupado el asiento de la clase de la tarifa superior
+\end{regla}
 
 
 
