--- a/tex/main.tex
+++ b/tex/main.tex
@@ -242,6 +242,8 @@ La razón entre las tarifas de respectivas clases ha de ser igual a la probabili
 \end{regla}
 
 
+Ha de encontrarse el número de asientos protegidos que satisfaga la probabilidad de ser ocupados requerida por la razón de las respectivas tarifas.
+
 
 
 \end{document}
