--- a/tex/main.tex
+++ b/tex/main.tex
@@ -200,9 +200,10 @@ La integral \eqref{eq:intgauss} no se puede resolver de forma analítica, sino p
 \centering
 \begin{tikzpicture}
 \begin{axis} [
+title = Campana de Gauss,
 axis lines = middle,
 xlabel={$x$},
-ylabel={$f$},
+ylabel={$f(x)$},
 ymax=0.5,
 %ymin=5,
 xmax=3,
