--- a/tex/main.tex
+++ b/tex/main.tex
@@ -311,12 +311,13 @@ E$_5$ & 40 & 60 &9 & - & - & - & -\\
 
 
 Según el algoritmo EMSR-b se comparan las clases en orden ascendente de precio. Se aplica la regla de Littlewood entre una clase y el resto cuál sea de mayor tarifa.
-i.e. la clase E ($i = 5$) se compara con el conjunto de las clases A, B, C y D; la clase C ($i = 3$) se compara con A y B etc.
+i.e. la clase E ($i = 5$) se compara con el conjunto de las clases A, B, C y D; la clase C ($i = 3$) se compara con A y B etc.\\
+
 
 Entonces se obtiene la tarifa media ponderada de un conjunto de clases como:
 
 \begin{align}
-\dfrac{\sum \text{tarifa}_i \cdot \mu_i}{\sum \mu_i}
+\text{Tarifa media ponderada}_i = \dfrac{\sum_{k=1}^{i} \text{tarifa}_k \cdot \mu_k}{\sum_{k=1}^{i} \mu_k}
 \end{align}
 
 
