--- a/tex/main.tex
+++ b/tex/main.tex
@@ -228,7 +228,7 @@ width=12cm,height=4cm,
 Dado que la función \eqref{eq:fgauss} es simétrica, la integral $\underset{t = \mu}{\text{\eqref{eq:intgauss}}}$ es igual a $\frac{1}{2}$. Entonces no es necesario calcular entre $(-\infty, t)$, sino $\frac{1}{2} + \int_\mu^t f(x)\dif x$ lo que alivia muchos recursos computacionales.
 
 \begin{align}
-P(t) = \dfrac{1}{2} + \int_\mu^t f(x)\dif x \label{eq:probgauss}
+P(t) = \dfrac{1}{2} + \int_\mu^t \underset{(\mu, \, \sigma)}{f(x)}\dif x \label{eq:probgauss}
 \end{align}
 
 
@@ -251,13 +251,13 @@ width=12cm,height=4cm,
 legend pos=south east,
 ]
 
-\addplot [green, thick] table {data1.dat};
+\addplot [cyan, thick] table {data1.dat};
 \addlegendentry{$(0,1)$}
-\addplot [yellow, thick] table {data2.dat};
+\addplot [magenta, thick] table {data2.dat};
 \addlegendentry{$(0,0.5)$}
 \addplot [blue, thick] table {data3.dat};
 \addlegendentry{$(1,1)$}
-\addplot [red, thick] table {data4.dat};
+\addplot [red, thick] table {data4.dat}; 
 \addlegendentry{$(-2,0.3)$}
 \end{axis}
 
@@ -345,7 +345,7 @@ title=Complementario,
 axis lines = middle,
 legend style={nodes={scale=0.5, transform shape}},
 xlabel={$t$},
-ylabel={$\underset{(\mu,\, \sigma)}{1 - P(t)}$},
+ylabel=$1 - ${$\underset{(\mu_i,\, \sigma_i)}{ P(t)}$},
 ymax=1.1,
 %ymin=5,
 xmax=3,
@@ -385,7 +385,7 @@ title=Linealización,
 axis lines = center,
 legend style={nodes={scale=0.5, transform shape}},
 xlabel={$\theta$},
-ylabel={$\underset{(\mu_i,\, \sigma_i)}{1 - P(\theta)}$},
+ylabel=$1 - ${$\underset{(\mu_i,\, \sigma_i)}{ P(\theta)}$},
 ymax=1.1,
 %ymin=5,
 xmax=3,
@@ -404,7 +404,7 @@ legend pos=north east,
 \addplot [blue, thick] {0.2};
 \addlegendentry{$y=\text{tarifa}_{i+1}/\text{tmp}_i$}
 \addplot [] {-0.399*(x-0)+0.5};
-\addlegendentry{$\left(1-P(\theta)\right)o(\theta^1)$}
+\addlegendentry{$\left(1-P(\theta)\right)\mathcal{O}(\theta^1)$}
 \end{axis}
 
 
