--- a/tex/main.tex
+++ b/tex/main.tex
@@ -257,7 +257,7 @@ legend pos=south east,
 \addlegendentry{$(0,0.5)$}
 \addplot [blue, thick] table {data3.dat};
 \addlegendentry{$(1,1)$}
-\addplot [red, thick] table {data4.dat}; 
+\addplot [red, thick] table {data4.dat};
 \addlegendentry{$(-2,0.3)$}
 \end{axis}
 
@@ -333,7 +333,7 @@ Para la desviación conjunta se toma la raíz cuadrada del sumatorio de las vari
 Dados estos parámetros conjuntos, se procede a aplicar la regla de Littlewood entre cada clase y el conjunto restante.
 
 \begin{align}
-\dfrac{\text{tarifa}_{i + 1}}{\text{tmp}_i} =  P(x > \theta_i)
+\dfrac{\text{tarifa}_{i + 1}}{\text{tmp}_i} =  \underset{(\mu_i, \, \sigma_i)}{P(x > \theta_i)}
 \end{align}
 
 
