--- a/tex/main.tex
+++ b/tex/main.tex
@@ -503,7 +503,7 @@ legend pos=north east,
 axis y line*=right,
 legend style={nodes={scale=0.5, transform shape}},
 % xlabel={$\theta$},
-ylabel=tmp$_i$,
+ylabel=tarifa$_i$,
 % ymax=0.048,
 ymin=0,
 xmax=350,
