--- a/tex/main.tex
+++ b/tex/main.tex
@@ -35,10 +35,14 @@
 % \newcommand{\hlc}[2][yellow]{ {\sethlcolor{#1} \hl{#2}} }
 
 
+\title{Optimización Comercial}
+\author{Marco Aias et al.}
+\date{\today}
 
 
 
 \begin{document}
+\maketitle
 
 
 \section{Productos}
